[#156654258] Fixed word wrap.ˆ

--- a/reactjs/components/atoms/Comment/CommentItem/_styles.scss
+++ b/reactjs/components/atoms/Comment/CommentItem/_styles.scss
@@ -64,6 +64,7 @@
 
   .comment-body {
     color: $carbon;
+    word-wrap: break-word;
   }
 
   .comment-footer {
